; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_fq_codel.c_fq_if_dequeue_sc_classq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/pktsched/extr_pktsched_fq_codel.c_fq_if_dequeue_sc_classq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifclassq = type { i64 }
%struct.TYPE_4__ = type { i32* }

@CLASSQ_DEQUEUE_MAX_BYTE_LIMIT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ifclassq*, i32, i32*)* @fq_if_dequeue_sc_classq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @fq_if_dequeue_sc_classq(%struct.ifclassq* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ifclassq*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store %struct.ifclassq* %0, %struct.ifclassq** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %11 = load %struct.ifclassq*, %struct.ifclassq** %4, align 8
  %12 = getelementptr inbounds %struct.ifclassq, %struct.ifclassq* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = inttoptr i64 %13 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %8, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i64 @fq_if_service_to_priority(%struct.TYPE_4__* %15, i32 %16)
  store i64 %17, i64* %10, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i64, i64* %10, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  store i32* %22, i32** %9, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %24 = load i32*, i32** %9, align 8
  %25 = load i32, i32* @CLASSQ_DEQUEUE_MAX_BYTE_LIMIT, align 4
  %26 = load i32, i32* @TRUE, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @fq_if_dequeue(%struct.TYPE_4__* %23, i32* %24, i32 1, i32 %25, i8** %7, i32* null, i32* null, i32* null, i32 %26, i32* %27)
  %29 = load i8*, i8** %7, align 8
  ret i8* %29
}

declare dso_local i64 @fq_if_service_to_priority(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @fq_if_dequeue(%struct.TYPE_4__*, i32*, i32, i32, i8**, i32*, i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
